--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DEBUG=True
 DB_NAME=online_shop_db
 DB_USER=postgres
 DB_PASSWORD=1
+EMAIL_HOST_USER=nazzirovdanniel@gmail.com
+EMAIL_HOST_PASSWORD=SUGARDADDYHOT0407
